syntax = "proto2";

package auth;

message LoginRequest {
    required int32 requestId = 1;
    required string email = 2;
    required string password = 3;
}